lpc10: Avoid compiler warning when DONT_OPTIMIZE/COMPILE_DOUBLE.

ASTERISK-23556
Reported by: Marcello Ceschia

Change-Id: Ic27e88e0336a0d83877dc857938659dc5560b93c